--- a/eureka-service/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/eureka-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-server.port=${PORT:8761}
-eureka.client.fetch-registry=false
-eureka.client.register-with-eureka=false
+#server.port=${PORT:8761}
+#eureka.client.fetch-registry=false
+#eureka.client.register-with-eureka=false
+
+spring.application.name=eureka-service
