--- a/base-dataset-service/pom.xml
+++ b/base-dataset-service/pom.xml
@@ -45,6 +45,12 @@
         </dependency>-->
 
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
