--- a/base-dataset-service/src/main/resources/application.properties
+++ b/base-dataset-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Elasticsearch
 ctsa.elasticsearch.base-url=http://localhost:9200
-ctsa.elasticsearch.keyword-uri=/elastic_keywords/my_type
+ctsa.elasticsearch.keyword-uri=/elastic_keywords/ctsa_keywords
 # Database
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_base_db
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_base_db?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=anhkhue
 spring.datasource.password=123456
