Add endpoints for retrieving resources.

--- a/base-dataset-service/src/main/resources/application.properties
+++ b/base-dataset-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# CTSA Base Dataset Service
+server.port=${PORT:8001}
 # Elasticsearch
 ctsa.elasticsearch.base-url=http://localhost:9200
 ctsa.elasticsearch.keyword-uri=/elastic_keywords/ctsa_keywords
