--- a/ctsa-capstone-microservices/career-trend-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/career-trend-service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-#Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/ctsa_career_trend_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=12345678
+# Server Port
+server.port=${PORT:8006}
 
-#Default Alpha & Beta
-ctsa.career.trend.default-alpha=0.5
-ctsa.career.trend.default-beta=0.5
+# Datasource
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_career_trend_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=anhkhue
+spring.datasource.password=123456
+
+# Default Alpha & Beta
+ctsa.career.trend.default-alpha=0.789
+ctsa.career.trend.default-beta=0.789
