Add functions for choosing smoothing parameters. Not tested yet.

--- a/ctsa-capstone-microservices/career-trend-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/career-trend-service/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 # Server Port
 server.port=${PORT:8006}
-
 # Datasource
 spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_career_trend_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=anhkhue
 spring.datasource.password=123456
-
-# Default Alpha & Beta
-ctsa.career.trend.default-alpha=0.789
-ctsa.career.trend.default-beta=0.789
+# Redis
+spring.redis.host=localhost
+spring.redis.port=${PORT:6379}
+# Heuristic Search
+prediction.timeseries.default-alpha=0.789
+prediction.timeseries.default-beta=0.789
+prediction.heuristicsearch.hillclimbing.step=0.001
