--- a/ctsa-capstone-microservices/career-trend-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/career-trend-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Server Port
 server.port=${PORT:8006}
 # Datasource
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_career_trend_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=anhkhue
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://ctsa-capstone-db.cqkh2jnh9wxo.ap-southeast-1.rds.amazonaws.com:3306/ctsa_career_trend_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=ctsamaster
+spring.datasource.password=
 # Redis
 spring.redis.host=localhost
 spring.redis.port=${PORT:6379}
