--- a/ctsa-capstone-microservices/results-suggestions-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/results-suggestions-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8005}
 
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_results_suggestions_db
-spring.datasource.username=anhkhue
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://ctsa-capstone-db.cqkh2jnh9wxo.ap-southeast-1.rds.amazonaws.com:3306/ctsa_results_suggestions_db
+spring.datasource.username=ctsamaster
+spring.datasource.password=
