--- a/ctsa-capstone-microservices/warehouse-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/warehouse-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # CTSA Warehouse Service
 server.port=${PORT:8003}
 # Database
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_warehouse_db?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=anhkhue
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://ctsa-capstone-db.cqkh2jnh9wxo.ap-southeast-1.rds.amazonaws.com:3306/ctsa_warehouse_db?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=ctsamaster
+spring.datasource.password=
