--- a/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
@@ -4,12 +4,22 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 
 #Account status
-ctsa.account.enabled=1
-ctsa.account.disabled=0
+#ctsa.account.enabled=1
+#ctsa.account.disabled=0
 
 #Recruitment status
-ctsa.recruitment.enabled=1
-ctsa.recruitment.disabled=0
+#ctsa.recruitment.enabled=1
+#ctsa.recruitment.disabled=0
 
 # CTSA Careers Service
-ctsa.services.careers.base-url=http://localhost:8001
+#ctsa.services.careers.base-url=http://localhost:8001
+
+#Cloudinary
+#ctsa.cloudinary.cloud-name=ctsa-capstone
+#ctsa.cloudinary.api-key=921697169711314
+#ctsa.cloudinary.api-secret="7C3N-zpRTGpCga-_dM2JK-37GwE"
+
+#Multipart
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=50MB
+#spring.servlet.multipart.max-request-size=50MB
