Add dependencies for service-discovery in services. Create API Gateway but faced bug mentioned in spring-cloud/spring-cloud-gateway#577

--- a/ctsa-capstone-microservices/elasticsearch-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/elasticsearch-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # CTSA Elasticsearch Service
+spring.application.name=elasticsearch-service
 server.port=${PORT:8002}
 # Elasticsearch
 ctsa.elasticsearch.base-url=http://localhost:9200
