--- a/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
@@ -1,24 +1,25 @@
-#Database
-spring.datasource.url=jdbc:mysql://localhost:3306/ctsa_company_management?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=12345678
+# Port
+server.port=${PORT:8007}
+# Database
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_company_management?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=anhkhue
+spring.datasource.password=123456
+# Spring Cloud Stream RabbitMQ
+spring.cloud.stream.bindings.createRecruitmentDirectOutput.destination=create-recruitment-p2p
+spring.rabbitmq.addresses=0.0.0.0:5672
 
 #Account status
 #ctsa.account.enabled=1
 #ctsa.account.disabled=0
-
 #Recruitment status
 #ctsa.recruitment.enabled=1
 #ctsa.recruitment.disabled=0
-
 # CTSA Careers Service
 #ctsa.services.careers.base-url=http://localhost:8001
-
 #Cloudinary
 #ctsa.cloudinary.cloud-name=ctsa-capstone
 #ctsa.cloudinary.api-key=921697169711314
 #ctsa.cloudinary.api-secret="7C3N-zpRTGpCga-_dM2JK-37GwE"
-
 #Multipart
 #spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.max-file-size=50MB
