--- a/ctsa-capstone-microservices/eureka-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/eureka-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-#server.port=${PORT:8761}
-#eureka.client.fetch-registry=false
-#eureka.client.register-with-eureka=false
-
 spring.application.name=eureka-service
+server.port=${PORT:8761}
+eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=false
