--- a/ctsa-capstone-microservices/warehouse-service/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/warehouse-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # CTSA Warehouse Service
+spring.application.name=warehouse-service
 server.port=${PORT:8003}
 # Database
 #spring.datasource.url=jdbc:mysql://ctsa-capstone-db.cqkh2jnh9wxo.ap-southeast-1.rds.amazonaws.com:3306/ctsa_warehouse_db?useUnicode=true&characterEncoding=UTF-8
@@ -6,3 +7,8 @@ server.port=${PORT:8003}
 spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_warehouse_db?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=anhkhue
 spring.datasource.password=123456
+# Spring Cloud Stream
+spring.cloud.stream.bindings.createRecruitmentDirectInput.destination=create-recruitment-p2p
+spring.cloud.stream.bindings.createRecruitmentDirectInput.group=create-recruitment-p2p-group
+spring.cloud.stream.bindings.createRecruitmentDirectInput.durableSubscription=true
+spring.rabbitmq.addresses=0.0.0.0:5672
