--- a/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=company-management
 # Port
 server.port=${PORT:8007}
 # Database
@@ -7,7 +8,6 @@ spring.datasource.password=123456
 # Spring Cloud Stream RabbitMQ
 spring.cloud.stream.bindings.createRecruitmentDirectOutput.destination=create-recruitment-p2p
 spring.rabbitmq.addresses=0.0.0.0:5672
-
 #Account status
 #ctsa.account.enabled=1
 #ctsa.account.disabled=0
