--- a/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
+++ b/ctsa-capstone-microservices/company-management/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_company_management?useUnico
 spring.datasource.username=anhkhue
 spring.datasource.password=123456
 # Spring Cloud Stream RabbitMQ
-spring.cloud.stream.bindings.createRecruitmentDirectOutput.destination=create-recruitment-p2p
-spring.rabbitmq.addresses=0.0.0.0:5672
+#spring.cloud.stream.bindings.createRecruitmentDirectOutput.destination=create-recruitment-p2p
+#spring.rabbitmq.addresses=0.0.0.0:5672
 #Account status
 #ctsa.account.enabled=1
 #ctsa.account.disabled=0
