--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/application.properties
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=9000
+# Database
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/ctsa_db?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=anhkhue
+spring.datasource.password=123456
